projects/vb6parse/snapshots/parsers/cst/module_options/option_statements/option_base_with_comment.snap
---
source: projects/vb6parse/tests/module_options/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: BaseKeyword
          text: Base
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "0"
        - kind: Whitespace
          text: " "
        - kind: EndOfLineComment
          text: "' Set default array base"
        - kind: Newline
          text: "\n"
